# database-analytics-mcp

./: .gitignore  README.md  database_mcp_server.py  example_usage.py  implementation_plan.md  pyproject.toml  setup_database.py
