[project]
name = "database-analytics-mcp"
version = "0.1.0"
description = "Database Analytics MCP Server built with FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlalchemy>=2.0.41",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
